@@ -1,5 +1,3 @@
-//file:noinspection ConfigurationAvoidance
-//file:noinspection GrUnresolvedAccess
 plugins {
     id 'java'
 }
@@ -24,4 +22,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs('--enable-native-access=ALL-UNNAMED')
 }
